# TEAM_JOGAKHICURI_H4B_final

./: README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  output.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20b78788a743_updated_models_added_collection_.py  72ef3d656477_initial_migration.py  7a95ce5a356d_updated_quiz_models.py
backend/app/: config.py  main.py  models.py  output.md  services.py
backend/app/dependencies/: __init__.py  authorizations.py  db.py
backend/app/routers/: __init__.py  auth.py  categories.py  collections.py  documents.py  notes.py  quizzes.py  user.py
backend/app/schemas/: __init__.py  pydantic_validations.py
backend/app/schemas/request/: __init__.py  notes.py  user.py
backend/app/schemas/response/: base.py  notes.py  quizzes.py
backend/app/tasks/: tasks.py  worker.py
backend/app/utils/: __init__.py  create_note_ai.py  create_note_and_quiz_ai.py  create_quiz.py  create_quiz_v2.py  data_ingestor.py  ingest.py  notifications.py  security.py  test.py  vars.py
backend/migrations/versions/: add_json_columns_to_quiz_questions.py
frontend/: output.md  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.js
frontend/src/components/: GenericModal.js  NoteEditor.js  NoteViewPage.js  NotesListPage.js  QuizAnalysis.js  QuizGenerator.js  QuizGenerator.jsx  QuizListPage.js
frontend/src/styles/: NoteEditor.css  NoteViewPage.css  NotesListPage.css  QuizAnalysis.css  QuizGenerator.css  QuizListPage.css
